src/app/globals.scss
/* ... */
.ty450 {
  transform: translateY(460px);
}

.hover-horizontalcard:hover {
  background-color: rgb(247 247 248) !important;
}

.sticky-header {
  position: sticky;
  z-index: 999;
  top: 0;
  transform: translateY(-120px);
}

a {
  background-image: none !important;
}

.title-anti-enlarge.fr-enlarge-link:hover {
  background-color: transparent;
}

.hover-title-link.fr-link.fr-link--sm {
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 3px;
}

.hover-title-link.fr-link.fr-link--sm:active {
  background-color: #cacafb;
}

.hover-title-link.fr-link.fr-link--sm:hover {
  background-color: #e3e3fd;
  border-radius: 40px;
}

.headerlink.sublink::after {
  content: none;
}

.title-link {
  transform: translateY(8px);
  position: absolute;
  right: 0;
}

/* TAILLES IFRAME */
.px300 {
  width: 300px;
}

.px600 {
  width: 600px;
}

.px900 {
  width: 900px;
}

.py300 {
  height: 300px;
}

.py600 {
  height: 600px;
}

.py900 {
  height: 900px;
}

.py2300 {
  height: 2300px;
}

.delimiter {
  margin-top: 2px;
  margin-left: 10px;
  width: 1px;
  height: 25px;
  background-color: rgb(221 221 221);
}

.rollingcard-container {
  margin: 16px;
  z-index: 10;
  position: relative;
  display: block;
  cursor: pointer;
  min-height: 100px;
  padding: 20px;
  width: 70%;
  border: 1px solid rgb(221 221 221);
}

.rollingcard-container:hover {
  background-color: rgb(252 252 252);
}

.rollingcard-content {
  min-height: 50px;
}

.rollingcard-content-close {
  animation: disappear 0.5s forwards;
}

@keyframes disappear {
  from {
    opacity: 1;
    min-height: 50px;
  }

  to {
    opacity: 0;
    max-height: 0;
    min-height: 0;
  }
}

.rollingcard-content-open {
  animation: appear 0.5s forwards;
}

@keyframes appear {
  from {
    opacity: 0;
    min-height: 0;
  }

  to {
    opacity: 1;
    min-height: 50px;
  }
}

.rollingcard-bloc {
  display: flex;
  flex-direction: row;
  border: 1px solid rgb(221 221 221);
  padding: 20px;
  margin-top: 20px;
  margin-bottom: 20px;
}

.rollingcard-bloc-label {
  border-radius: 20px;
  color: rgb(0 0 145);
  background-color: #e3e3fd;
  padding: 5px;
  white-space: nowrap;
  margin: auto;
  margin-right: 10px;
}

.rollingcard-bloc-text {
  margin-bottom: -20px;
  flex-grow: 1;
}

.hidden {
  display: none;
}

.rollingcard-separator {
  margin: 0 auto;
  width: 70%;
  height: 1px;
  margin-top: 2rem;
  margin-bottom: 2rem;
  background-color: rgb(221 221 221);
}

.fr-btn--menu.fr-btn::selection {
  background-color: white !important;
}

.fr-btn--menu.fr-btn:focus {
  background-color: white !important;
}

.rollingcard-arrow-open {
  animation: rollingcard-rotate-arrow-open 0.5s forwards;
}

.rollingcard-arrow-close {
  animation: rollingcard-rotate-arrow-close 0.5s forwards;
}

@keyframes rollingcard-rotate-arrow-open {
  0% {
    transform: rotateZ(0deg);
  }

  100% {
    transform: rotateZ(180deg);
  }
}

@keyframes rollingcard-rotate-arrow-close {
  0% {
    transform: rotateZ(180deg);
  }

  100% {
    transform: rotateZ(0deg);
  }
}

.fr-breadcrumb {
  z-index: 10;
}

.decal-breadcumb {
  margin-top: -286px;
  margin-bottom: 270px;
}

.bannertitle-container {
  width: 100%;
  height: 270px;
  margin-bottom: 32px;
  background-color: #ececfe;
  text-align: center !important;
}

.toolsdevices.fr-card.fr-enlarge-link .fr-card__title a::after {
  content: none !important;

  --icon-size: 0 !important;
}

.fr-card.fr-enlarge-link.fr-card__title.a::after {
  content: none !important;

  --icon-size: 0 !important;
}

.media-img500px {
  width: 500px;
}

.media-img700px {
  width: 700px;
}

.media-img900px {
  width: 900px;
}

.fr-card.horizontal-custom {
  display: flex;
  flex-direction: initial;
}

.fr-h-100 {
  height: 100%;
}

.fr-w-100 {
  width: 100%;
}

.fr-tag--blue-france {
  background-color: var(--background-contrast-blue-france) !important;
  color: var(--text-action-high-blue-france) !important;
}

.fr-text--capitalize {
  text-transform: capitalize !important;
}

.fr-header__operator img {
  max-width: 9rem;
}

